--- a/src/Visao/InternalFrameVendas.form
+++ b/src/Visao/InternalFrameVendas.form
@@ -1,9 +1,23 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JInternalFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JInternalFrameFormInfo">
+  <Properties>
+    <Property name="closable" type="boolean" value="true"/>
+    <Property name="iconifiable" type="boolean" value="true"/>
+    <Property name="maximizable" type="boolean" value="true"/>
+    <Property name="resizable" type="boolean" value="true"/>
+    <Property name="title" type="java.lang.String" value="Buscar Vendas"/>
+  </Properties>
+  <AccessibilityProperties>
+    <Property name="AccessibleContext.accessibleDescription" type="java.lang.String" value=""/>
+  </AccessibilityProperties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
   </SyntheticProperties>
+  <Events>
+    <EventHandler event="internalFrameClosed" listener="javax.swing.event.InternalFrameListener" parameters="javax.swing.event.InternalFrameEvent" handler="formInternalFrameClosed"/>
+    <EventHandler event="internalFrameClosing" listener="javax.swing.event.InternalFrameListener" parameters="javax.swing.event.InternalFrameEvent" handler="formInternalFrameClosing"/>
+  </Events>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -26,7 +40,7 @@
               <Component id="jTextFieldInformacaoVenda" min="-2" pref="244" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="jButton1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace pref="652" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -68,7 +82,7 @@
             <Property name="cellSelectionEnabled" type="boolean" value="true"/>
           </Properties>
           <AuxValues>
-            <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="jTableVendas.getColumnModel().getColumn(0).setPreferredWidth(100);&#xa;jTableVendas.getColumnModel().getColumn(1).setPreferredWidth(180);&#xa;jTableVendas.getColumnModel().getColumn(2).setPreferredWidth(260);&#xa;jTableVendas.getColumnModel().getColumn(3).setPreferredWidth(260);&#xa;jTableVendas.getColumnModel().getColumn(4).setPreferredWidth(260);&#xa;jTableVendas.getColumnModel().getColumn(5).setPreferredWidth(50);&#xa;jTableVendas.getColumnModel().getColumn(6).setPreferredWidth(80);&#xa;jTableVendas.getColumnModel().getColumn(7).setPreferredWidth(80);&#xa;jTableVendas.getColumnModel().getColumn(8).setPreferredWidth(120);&#xa;jTableVendas.getColumnModel().getColumn(9).setPreferredWidth(100);&#xa;jTableVendas.getColumnModel().getColumn(10).setPreferredWidth(100);&#xa;jTableVendas.getColumnModel().getColumn(11).setPreferredWidth(80);&#xa;jTableVendas.getColumnModel().getColumn(12).setPreferredWidth(80);"/>
+            <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="jTableVendas.getColumnModel().getColumn(0).setPreferredWidth(100);&#xa;jTableVendas.getColumnModel().getColumn(1).setPreferredWidth(140);&#xa;jTableVendas.getColumnModel().getColumn(2).setPreferredWidth(200);&#xa;jTableVendas.getColumnModel().getColumn(3).setPreferredWidth(230);&#xa;jTableVendas.getColumnModel().getColumn(4).setPreferredWidth(260);&#xa;jTableVendas.getColumnModel().getColumn(5).setPreferredWidth(50);&#xa;jTableVendas.getColumnModel().getColumn(6).setPreferredWidth(50);&#xa;jTableVendas.getColumnModel().getColumn(7).setPreferredWidth(80);&#xa;jTableVendas.getColumnModel().getColumn(8).setPreferredWidth(80);&#xa;jTableVendas.getColumnModel().getColumn(9).setPreferredWidth(60);&#xa;jTableVendas.getColumnModel().getColumn(10).setPreferredWidth(100);&#xa;jTableVendas.getColumnModel().getColumn(11).setPreferredWidth(80);&#xa;jTableVendas.getColumnModel().getColumn(12).setPreferredWidth(80);"/>
             <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JTable()"/>
           </AuxValues>
         </Component>
