--- a/src/Visao/InternalModificarCodigoVenda.form
+++ b/src/Visao/InternalModificarCodigoVenda.form
@@ -80,7 +80,7 @@
               <Component id="jTextFieldIdVenda" min="-2" pref="126" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="jButton1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
