--- a/src/Visao/InternalCadastroVendaOutrosMeios.form
+++ b/src/Visao/InternalCadastroVendaOutrosMeios.form
@@ -16,7 +16,7 @@
   <Properties>
     <Property name="closable" type="boolean" value="true"/>
     <Property name="iconifiable" type="boolean" value="true"/>
-    <Property name="maximizable" type="boolean" value="true"/>
+    <Property name="resizable" type="boolean" value="true"/>
     <Property name="title" type="java.lang.String" value="Cadastrar Venda"/>
   </Properties>
   <SyntheticProperties>
